# conv

./: .gitignore  LICENSE  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
man/: conv.1
scripts/: build-win-qt.bat  build-win.bat  entry_gui.py  entry_gui_qt.py  generate_icon.py
src/conv/: __init__.py  __main__.py  cli.py  core.py  gui.py  history.py  logger.py
src/conv/gui/: __init__.py  about.py  app.py  history_window.py  theme.py
src/conv/gui/controllers/: conversion.py
src/conv/gui/widgets/: drop_zone.py  file_list.py  file_table.py  params.py  preview.py  timeline.py
src/conv/gui_qt/: __init__.py  about.py  app.py  i18n.py  theme.py
src/conv/gui_qt/controllers/: conversion.py
src/conv/gui_qt/widgets/: file_table.py  params.py  preview.py  timeline.py
