[metadata]
name = conv
version = 2.0.0
description = 🖧 Иохим Кузьмич — кроссплатформенный медиа-конвертер
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0-or-later
author = Иохим Кузьмич

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    Pillow>=10.0.0
    tqdm>=4.60.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    conv = conv.cli:main
    conv-gui = conv.gui:run_gui
    conv-gui-qt = conv.gui_qt:run_gui
